:memo: "name": "@hudiemon/jweixin",

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jweixin",
+  "name": "@hudiemon/jweixin",
   "version": "1.6.0",
   "description": "微信JS-SDK，不修改任何代码，仅发包",
   "main": "index.js",
